--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -49,7 +49,10 @@
         </div>
         <p class="loading-hint" id="loadingHint">Waiting for model reply…</p>
       </div>
-      <div id="errorWrap" class="error-wrap hidden"><p id="errorText" class="error"></p></div>
+      <div id="errorWrap" class="error-wrap hidden">
+        <p id="errorText" class="error"></p>
+        <button type="button" id="errorRetryBtn" class="error-retry-btn" aria-label="Retry evaluation" title="Retry">↻</button>
+      </div>
       <div id="markBadWrap" class="mark-bad-wrap">
         <label class="label">Mark current job as bad</label>
         <input type="text" id="markBadComment" class="input" placeholder="Reason (e.g. wrong location, no remote)" maxlength="500" />
